--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ button{
 }
 
 section{
-    margin: 4rem;
+    margin: 4rem 0;
 }
 
 .brand_logo {
@@ -41,6 +41,9 @@ section{
 
 .navbar__brand {
     width: 100px;
+}
+.navbar__nav__items {
+    display: flex;
 }
 .button__primary {
     margin: 10px;
@@ -128,7 +131,7 @@ section{
     content: "";
     top: 0;
     left: 0;
-    position: relative;
+    position: absolute;
     transform: translate(1rem, 1rem);
     height: 100%;
     width: 100%;
